Added upload feature

--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GOOGLE_CLOUD_PROJECT_ID=consummate-gift-331813
+GOOGLE_CLOUD_KEY_FILE=service-account-storage.json
+GOOGLE_CLOUD_STORAGE_BUCKET=odf_fc_code_micro_videos
+GOOGLE_CLOUD_STORAGE_API_URI=https://console.cloud.google.com/storage/browser/odf_fc_code_micro_videos
