--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:mUZnRkQCZD2yPhTp4UwmmWHAaURyUDenKET5/MajtAQ=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=code_micro_videos
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -20,7 +20,7 @@ SESSION_DRIVER=file
 SESSION_LIFETIME=120
 FILESYSTEM_DRIVER=video_local
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -44,7 +44,8 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-GOOGLE_CLOUD_PROJECT_ID=consummate-gift-331813
+
+GOOGLE_CLOUD_PROJECT_ID=
 GOOGLE_CLOUD_KEY_FILE=service-account-storage.json
-GOOGLE_CLOUD_STORAGE_BUCKET=odf_fc_code_micro_videos
-GOOGLE_CLOUD_STORAGE_API_URI=https://console.cloud.google.com/storage/browser/odf_fc_code_micro_videos
+GOOGLE_CLOUD_STORAGE_BUCKET=
+GOOGLE_CLOUD_STORAGE_API_URI=
