--- a/backend/.env.example
+++ b/backend/.env.example
@@ -49,3 +49,5 @@ GOOGLE_CLOUD_PROJECT_ID=
 GOOGLE_CLOUD_KEY_FILE=service-account-storage.json
 GOOGLE_CLOUD_STORAGE_BUCKET=
 GOOGLE_CLOUD_STORAGE_API_URI=
+
+CORS_ORIGINS=http://localhost:3000
