--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,12 +7,14 @@ services:
       entrypoint: dockerize -wait tcp://db:3306 -timeout 40s ./.docker/entrypoint.sh
       ports:
          - '3000:3000'
+         #- '36729:35729'
       environment:
          - _DB_HOST=db
          - _DB_DATABASE=code_micro_videos
          - _DB_USERNAME=root
          - _DB_PASSWORD=root
          - _TEST_DB_DATABASE=code_micro_videos_test
+         #- CHOKIDAR_USEPOOLING=true
       volumes:
          - .:/var/www
       networks:
