--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,25 +6,26 @@
 		"@material-ui/core": "^4.9.0",
 		"@material-ui/icons": "^4.5.1",
 		"@material-ui/lab": "^4.0.0-alpha.40",
-		"@testing-library/jest-dom": "^5.15.0",
+		"@testing-library/jest-dom": "^5.16.1",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
 		"@types/jest": "^26.0.24",
-		"@types/mui-datatables": "^2.12.2",
+		"@types/mui-datatables": "^2.14.2",
 		"@types/node": "^12.20.37",
-		"@types/react": "^17.0.35",
+		"@types/react": "^17.0.37",
 		"@types/react-dom": "^17.0.11",
-		"@types/react-router-dom": "^5.1.2",
+		"@types/react-router-dom": "^5.3.2",
 		"@types/route-parser": "^0.1.3",
 		"axios": "^0.24.0",
-		"date-fns": "^2.7.0",
-		"mui-datatables": "^2.12.4",
+		"date-fns": "^2.27.0",
+		"mui-datatables": "^2.15.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-router-dom": "^5.1.2",
+		"react-hook-form": "^5.5.3",
+		"react-router-dom": "^5.3.0",
 		"react-scripts": "4.0.3",
 		"route-parser": "0.0.5",
-		"typescript": "^4.5.2",
+		"typescript": "^4.5.4",
 		"web-vitals": "^1.1.2"
 	},
 	"scripts": {
