--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
 		"@types/react-dom": "^17.0.11",
 		"@types/react-router-dom": "^5.3.2",
 		"@types/route-parser": "^0.1.3",
+		"@types/yup": "^0.26.26",
 		"axios": "^0.24.0",
 		"date-fns": "^2.27.0",
 		"mui-datatables": "^2.15.0",
+		"notistack": "^0.9.7",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-hook-form": "^5.5.3",
@@ -26,7 +28,8 @@
 		"react-scripts": "4.0.3",
 		"route-parser": "0.0.5",
 		"typescript": "^4.5.4",
-		"web-vitals": "^1.1.2"
+		"web-vitals": "^1.1.2",
+		"yup": "^0.27.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -38,7 +41,10 @@
 		"extends": [
 			"react-app",
 			"react-app/jest"
-		]
+		],
+		"rules": {
+			"no-template-curly-in-string": "off"
+		}
 	},
 	"browserslist": {
 		"production": [
