--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
 		"@types/jest": "^26.0.24",
+		"@types/lodash": "^4.14.178",
 		"@types/mui-datatables": "^2.14.2",
 		"@types/node": "^12.20.37",
 		"@types/react": "^17.0.37",
@@ -19,6 +20,7 @@
 		"@types/yup": "^0.26.26",
 		"axios": "^0.24.0",
 		"date-fns": "^2.27.0",
+		"lodash": "^4.17.21",
 		"mui-datatables": "^2.15.0",
 		"notistack": "^0.9.7",
 		"react": "^17.0.2",
@@ -26,6 +28,8 @@
 		"react-hook-form": "^5.5.3",
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "4.0.3",
+		"redux": "^4.0.4",
+		"reduxsauce": "^1.1.1",
 		"route-parser": "0.0.5",
 		"typescript": "^4.5.4",
 		"web-vitals": "^1.1.2",
