--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
 		"reduxsauce": "^1.1.1",
 		"route-parser": "0.0.5",
 		"typescript": "^4.5.4",
+		"use-debounce": "^3.3.0",
 		"web-vitals": "^1.1.2",
 		"yup": "^0.27.0"
 	},
